[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/Screens/PauseScreen/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://common/assets/fonts/font.tres" type="DynamicFont" id=2]

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
rect_scale = Vector2( 0.5, 0.5 )
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -320.0
margin_top = -180.0
margin_right = 320.0
margin_bottom = 180.0
color = Color( 0.701961, 0.701961, 0.701961, 1 )

[node name="ContinueButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -105.0
margin_top = -145.0
margin_right = 105.0
margin_bottom = -75.0
custom_fonts/font = ExtResource( 2 )
text = "Continue"

[node name="RestartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -105.0
margin_top = -35.0
margin_right = 105.0
margin_bottom = 35.0
custom_fonts/font = ExtResource( 2 )
text = "restart"

[node name="ExitButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -105.0
margin_top = 75.0
margin_right = 105.0
margin_bottom = 145.0
custom_fonts/font = ExtResource( 2 )
text = "Exit"
